--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "name": "fe_lab_clinicas_self_service DEV",
             "request": "launch",
             "type": "dart",
             "args": [
-                "--dart--define-from-file",
+                "--dart-define-from-file",
                 ".config/env.json"
             ]
         },
